# wutheringwaves-cli-manager

./: .gitignore  LICENSE  Makefile  README.md  cli.py  config.py  core.py  pyproject.toml  run_ww.sh  run_zmd.sh
.github/: generate-pkgbuild.sh
.github/workflows/: aur-publish.yml  release-hpatchz.yml
src/ww_manager/: cli.py  core.py  download.py  incremental.py
test-scripts/: api.py  api2.py  api_dump.json  group_12.krpdiff  hpatchz  res.json
