[project]
name = "ww-manager"
version = "2.0.6"
description = "鸣潮 (Wuthering Waves) 命令行管理器"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["typer", "tqdm", "certifi", "rich"]

[project.scripts]
ww = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = ["pre-commit>=4.3.0"]
