[project]
name = "ww-manager"
version = "2.1.7"
description = "鸣潮命令行管理器"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer",
    "certifi",
    "rich",
    "typing-extensions>=4.15.0",
]

[project.scripts]
ww = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = ["pre-commit>=4.3.0"]
