[project]
name = "ww-manager"
version = "2.2.0"
description = "鸣潮命令行管理器"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer",
    "certifi",
    "rich",
    "typing-extensions>=4.15.0",
    "requests>=2.31.0",
]

[project.scripts]
ww = "ww_manager.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = { "ww_manager" = "src/ww_manager" }

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = ["pre-commit>=4.3.0"]
